# agentic_co-emergence

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  repository_tree.txt  shortcuts.txt
.github/workflows/: tests.yml
agentic_co_emergence/: .gitignore
agentic_co_emergence/cli/: run.py
agentic_co_emergence/core/: adsn_validator.py  event_parser.py  model_adapter.py  policy_loader.py  prompt_builder.py  prompt_compiler.py  protocol_loader.py  runtime.py  runtime_controller.py  runtime_policy.json  semantic_feedback.py  state_machine.py  transition_engine.py  validator.py
agentic_reasoning_v0_1/agentic_reasoning_v0_1/: README.md  pyproject.toml
agentic_reasoning_v0_1/agentic_reasoning_v0_1/agentic_reasoning/cli/: run.py
agentic_reasoning_v0_1/agentic_reasoning_v0_1/agentic_reasoning/models/: event.py  inquiry.py
agentic_reasoning_v0_1/agentic_reasoning_v0_1/docs/: architecture.md  implementation_plan.md
agentic_reasoning_v0_1/agentic_reasoning_v0_1/tests/: test_state_machine.py
docs/: PORT_MAP.md  architecture.md  computational_model.md  ontology.md  research_questions.md
docs/adr/: README.md  (+1 more)
examples/: demo_run.py  ethical_governance_inquiry.yaml  inspect_memory.py  inspect_runtime_package.py  inspect_semantic_graph.py  query_memory.py  trace_semantic_node.py
paper/: ACE_Foundational_Artefact_001.tex  body_v0.1.tex  main.tex
runtime_reports/: what-should-ethical-governance-look-like-20260701-093118_report.md
tests/: test_runtime_governance.py  test_runtime_v8_structure.py  test_state_machine.py
(+40 files in other folders)
