[project]
name = "agentic-reasoning"
version = "0.1.0"
description = "A governed runtime for agentic reasoning before judgement or decision."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
